<LinearLayout
    style="@style/StandardLinearLayoutPage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="top">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
        app:titleTextAppearance="@style/ToolbarTitleAppearance"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="64sp"
        android:id="@+id/toolbar"

        app:contentInsetLeft="@dimen/app_padding"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetStart="@dimen/app_padding"
        app:contentInsetEnd="@dimen/app_padding"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="@dimen/app_padding"
            android:layout_marginEnd="@dimen/app_padding"
            style="@style/StandardLinearLayout">

            <!-- CHECKBOXES -->

            <CheckBox
                style="@style/RightCheckBox"
                android:id="@+id/saveLocalBackups"
                android:text="@string/sets_backups"
                android:onClick="onBackupTap"/>

            <TextView
                style="@style/BaseText"
                android:id="@+id/saveLocalBackupsPath"
                android:layout_width="match_parent"
                android:maxLines="1"/>

            <View
                style="@style/GrayDivider"
                android:layout_marginTop="15dp"/>

            <CheckBox
                style="@style/RightCheckBox"
                android:id="@+id/fpAuthentication"
                android:layout_marginBottom="15dp"
                android:text="@string/sets_fp"
                android:onClick="onFpTap"/>

            <View style="@style/GrayDivider"/>

            <CheckBox
                style="@style/RightCheckBox"
                android:id="@+id/ensureTorRunning"
                android:text="@string/sets_orbot"
                android:onClick="onTorTap"/>

            <TextView
                style="@style/BaseText"
                android:text="@string/sets_orbot_details"
                android:layout_width="match_parent"/>

            <View
                style="@style/GrayDivider"
                android:layout_marginTop="15dp"/>

            <CheckBox
                style="@style/RightCheckBox"
                android:id="@+id/useTrustedNode"
                android:text="@string/sets_trusted"
                android:onClick="onTrustedTap"/>

            <TextView
                style="@style/BaseText"
                android:layout_marginBottom="15dp"
                android:id="@+id/useTrustedNodeState"
                android:layout_width="match_parent"
                android:maxLines="1"/>

            <View style="@style/GrayDivider"/>

            <CheckBox
                style="@style/RightCheckBox"
                android:id="@+id/constrainLNFees"
                android:text="@string/sets_ln_fee_cap"
                android:onClick="onConstrainLNFeesTap"/>

            <TextView
                style="@style/BaseText"
                android:id="@+id/constrainLNFeesState"
                android:layout_width="match_parent"/>

            <View
                style="@style/GrayDivider"
                android:layout_marginTop="15dp"/>

            <!-- BUTTONS -->

            <Button
                style="@style/TransButton"
                android:id="@+id/setFiatCurrency"
                android:text="@string/sets_set_fiat"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/chooseBitcoinUnit"
                android:text="@string/sets_choose_unit"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/rescanWallet"
                android:text="@string/sets_rescan"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/viewMnemonic"
                android:text="@string/sets_mnemonic"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/manageOlympus"
                android:text="@string/sets_manage_olympus"/>

            <View style="@style/GrayDivider"/>

            <Button
                style="@style/TransButton"
                android:id="@+id/recoverChannelFunds"
                android:text="@string/sets_chan_recover"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>