<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="2dp"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/app_padding">

        <!-- hosted warning -->

        <LinearLayout
            style="@style/CardLinearLayout"
            android:id="@+id/hostedWarningHeader"
            android:paddingTop="@dimen/app_padding">

            <TextView
                style="@style/CardBaseText"
                android:textColor="@color/bgbar"
                android:text="@string/ln_ops_start_fund_hosted_channel"
                android:textStyle="bold"/>

            <ImageButton
                android:onClick="goHostedInfo"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/outline_help_24"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:alpha="0.5"/>

        </LinearLayout>

        <!-- Header -->

        <LinearLayout style="@style/CardLinearLayout" android:layout_marginTop="@dimen/app_padding">
            <TextView style="@style/BaseText" android:layout_width="wrap_content" android:id="@+id/addressAndKey"/>
            <TextView android:maxLines="2" android:gravity="end" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/stateAndConnectivity" style="@style/BaseText"/>
        </LinearLayout>

        <!-- Progress bars -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:progressDrawable="@drawable/stacked_horizontal_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginRight="@dimen/app_padding"
                android:layout_marginLeft="@dimen/app_padding"
                android:layout_marginTop="@dimen/app_padding"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/baseBar"/>

            <ProgressBar
                android:progressDrawable="@drawable/overlay_horizontal_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginRight="@dimen/app_padding"
                android:layout_marginLeft="@dimen/app_padding"
                android:layout_marginTop="@dimen/app_padding"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/overBar"/>

        </FrameLayout>

        <!-- Capacity, can send/receive -->

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/totalCapacity" android:layout_marginTop="@dimen/app_padding">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_capacity"/>
            <TextView style="@style/CardBaseText" android:textColor="@color/bgbar" android:id="@+id/totalCapacityText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/canSend">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_can_send"/>
            <TextView style="@style/CardBaseText" android:textColor="@color/ln" android:id="@+id/canSendText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/canReceive">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_can_receive"/>
            <TextView style="@style/CardBaseText" android:textColor="@color/btc" android:id="@+id/canReceiveText" android:gravity="end"/>
        </LinearLayout>

        <View
            style="@style/GrayDivider"
            android:id="@+id/balancesDivider"
            android:layout_marginTop="@dimen/app_padding"
            android:layout_marginBottom="@dimen/app_padding"/>

        <!-- Refundable info -->

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/refundableAmount">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_refundable"/>
            <TextView style="@style/CardBaseText" android:textColor="#6AAB38" android:id="@+id/refundableAmountText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/refundFee">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_fee"/>
            <TextView style="@style/CardBaseText" android:textColor="@color/reddish" android:id="@+id/refundFeeText" android:gravity="end"/>
        </LinearLayout>

        <View
            style="@style/GrayDivider"
            android:layout_marginTop="@dimen/app_padding"
            android:layout_marginBottom="@dimen/app_padding"/>

        <!-- Statistics -->

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/startedAt">
            <TextView style="@style/CardBaseText" android:layout_weight="4" android:text="@string/ln_info_started"/>
            <TextView style="@style/CardBaseText" android:id="@+id/startedAtText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/closedAt">
            <TextView style="@style/CardBaseText" android:layout_weight="4" android:text="@string/ln_info_closed"/>
            <TextView style="@style/CardBaseText" android:id="@+id/closedAtText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/paymentsInFlight">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_in_flight"/>
            <TextView style="@style/CardBaseText" android:id="@+id/paymentsInFlightText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/fundingDepth">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_depth"/>
            <TextView style="@style/CardBaseText" android:id="@+id/fundingDepthText" android:gravity="end"/>
        </LinearLayout>

        <LinearLayout style="@style/CardLinearLayout" android:id="@+id/totalPayments">
            <TextView style="@style/CardBaseText" android:text="@string/ln_info_total_payments"/>
            <TextView style="@style/CardBaseText" android:id="@+id/totalPaymentsText" android:gravity="end"/>
        </LinearLayout>

        <!-- Extra message -->

        <TextView
            style="@style/BaseText"
            android:textStyle="italic"
            android:id="@+id/extraInfoText"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/app_padding"
            android:paddingRight="@dimen/app_padding"
            android:paddingTop="@dimen/app_padding"/>

    </LinearLayout>
</android.support.v7.widget.CardView>