<LinearLayout
    style="@style/StandardLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bgload"
        android:id="@+id/mainChoice"
        android:visibility="gone">

        <TextView
            style="@style/Info"
            android:id="@+id/mainGreetings"
            android:text="@string/greetings"
            android:layout_marginBottom="45dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="exitCreateWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_create"/>

        <TextView
            style="@style/Info"
            android:text="&#8226;"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="goRestoreWallet"
            android:layout_width="wrap_content"
            android:text="@string/wallet_restore"/>

    </LinearLayout>

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bgload"
        android:id="@+id/mainFingerprint"
        android:visibility="gone">

        <ImageView
            android:layout_marginBottom="25dp"
            android:id="@+id/mainFingerprintImage"
            android:background="@drawable/baseline_fingerprint_white_36"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bgload"
        android:id="@+id/mainOrbot"
        android:visibility="gone">

        <TextView
            style="@style/Info"
            android:layout_marginBottom="45dp"
            android:text="@string/orbot_status"
            android:layout_width="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        style="@style/StandardLinearLayout"
        android:background="@color/bgload"
        android:id="@+id/mainOrbotIssues"
        android:visibility="gone">

        <TextView
            style="@style/Info"
            android:textColor="#E68A00"
            android:id="@+id/mainOrbotMessage"
            android:layout_marginBottom="45dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:id="@+id/takeOrbotAction"
            android:layout_width="wrap_content"/>

        <TextView
            style="@style/Info"
            android:text="&#8226;"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"/>

        <Button
            style="@style/Info"
            android:onClick="skipOrbotCheck"
            android:layout_width="wrap_content"
            android:text="@string/orbot_action_skip"/>

    </LinearLayout>
</LinearLayout>